<resources>
    <string name="app_name">栖息地</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="publish">发布</string>
    <string name="news_feed">动态</string>
    <string name="mine">我的</string>

    <string name="near_people">附近的人</string>
    <string name="friends_feed">好友动态</string>
    <string name="neighbour_feed">社区动态</string>
    <string name="my_attentions">我关注的</string>
    <string name="about_me">关于我的</string>
    <string name="my_circle">我的圈子</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="attention">关注</string>
    <string name="attention_already">已关注</string>
    <string name="comment">评论</string>
    <string name="collection">收藏</string>
    <string name="more">更多</string>
    <string name="add_user">添加用户</string>
    <string name="search_neighbour_user">搜索小区或用户名</string>
    <string name="recommend_user">推荐用户</string>
    <string name="avatar">头像</string>
    <string name="image">图片</string>
    <string name="cancel">取消</string>
    <string name="search_user_neighbourhood_note">你可以搜索到相关的用户、小区和帖子</string>
    <string name="empty">空</string>

    <string name="user">用户</string>
    <string name="circle">圈子</string>
    <string name="content">内容</string>
    <string name="go_back">返回</string>
    <string name="address_book">通讯录</string>
    <string name="write_your_comment">写评论，发表观点</string>
    <string name="like">赞</string>
    <string name="say_something">说点什么吧…</string>
    <string name="who_can_see">谁可以看</string>
    <string name="notice_who_see">提醒谁看</string>
    <string name="_content_">正 文</string>
    <string name="please_input_content">请输入内容</string>
    <string name="anybody_can_see">所有人可见</string>
    <string name="please_choose">请选择</string>
    <string name="click">点击</string>
    <string name="partly_can_see">部分不可见</string>
    <string name="only_self_see">仅自己可见</string>
    <string name="recent_contacts">最近联系</string>
    <string name="see_detail">查看资料</string>
    <string name="dong_tai">动态</string>
    <string name="pictures">照片</string>
    <string name="fans">粉丝</string>
    <string name="my_collect">我的收藏</string>
    <string name="complete_data">完善资料</string>
    <string name="create_circle">创建小区圈子</string>
    <string name="share_place">分享栖息地</string>
    <string name="settings">设置</string>
    <string name="nick">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="zone_name">小区名称</string>
    <string name="my_sign">个性签名</string>
    <string name="hint_input_phone">请输入11位手机号码</string>
    <string name="hint_sms_code">请输入短信验证码</string>
    <string name="hint_password">请输入 6-16 位字母和数字密码</string>
    <string name="re_send">重新发送</string>
    <string name="hint_user_name">请输入您的用户名</string>
    <string name="guangguang_xian">先逛逛</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="third_login">第三方登录</string>
    <string name="hint_login_password">请输入您的登录密码</string>
    <string name="login_">登 录</string>
    <string name="register_">注 册</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="find_password">找回密码</string>
    <string name="save">保存</string>
    <string name="change_password">修改密码</string>
    <string name="update_version">版本更新</string>
    <string name="invite_friends">邀请好友</string>
    <string name="clear_cache">清理缓存</string>
    <string name="publish_now">立即发布</string>
    <string name="hint_input_nick">请输入昵称</string>
    <string name="lazy_man">这个人很懒，什么都没有留下</string>
    <string name="add">加入</string>
    <string name="create_content">创建内容</string>
    <string name="user_data">用户资料</string>
    <string name="black_note">黑名单</string>
    <string name="new_msg_hint">新消息提醒</string>
    <string name="remove">移除</string>
    <string name="share_content">我在用“栖息地”这款APP，在这里汇聚了多领域的品质生活家与生活达人，快来加入吧。</string>
</resources>
