<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/who_can_see_round_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/anybody_can_see"
            style="@style/ios_dialog_item"
            android:text="@string/anybody_can_see"/>

        <View style="@style/horizontal_line"/>

        <TextView
            android:id="@+id/only_self_see"
            style="@style/ios_dialog_item"
            android:text="@string/only_self_see"/>

        <View style="@style/horizontal_line"/>

        <TextView
            android:id="@+id/partly_can_see"
            style="@style/ios_dialog_item"
            android:text="@string/partly_can_see"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv_cancel"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/who_can_see_round_corner"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/textGray"
            style="@style/ios_dialog_item"
            android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>