<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditUserInfoActivity">

    <android.support.v7.widget.Toolbar
        style="@style/toolBarStyle">

        <TextView style="@style/toolbar_back_button"/>

        <TextView
            style="@style/toolbar_title_style"
            android:text="@string/complete_data"/>
    </android.support.v7.widget.Toolbar>

    <View style="@style/horizontal_line"/>

    <LinearLayout
        style="@style/complete_data_click_item">

        <TextView
            style="@style/complete_data_text1"
            android:text="@string/avatar"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.sumauto.habitat.widget.AvatarView
            android:id="@+id/iv_avatar"
            android:onClick="onAvatarClick"
            android:layout_width="@dimen/avatarSize"
            android:layout_height="@dimen/avatarSize"
            android:layout_marginRight="@dimen/dp_10_in_xhdpi"
            android:src="@drawable/test_image_01"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_clickable"/>
    </LinearLayout>

    <LinearLayout
        style="@style/complete_data_click_item"
        android:layout_marginTop="@dimen/view_spacing_2">

        <TextView
            style="@style/complete_data_text1"
            android:text="@string/nick"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <EditText
            android:singleLine="true"
            android:background="#0000"
            style="@style/complete_data_item_value"
            android:text="哈哈哈"/>

        <ImageView
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_clickable"/>
    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <LinearLayout
        android:onClick="onGenderClick"
        style="@style/complete_data_click_item">

        <TextView
            style="@style/complete_data_text1"
            android:text="@string/gender"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_gender"
            style="@style/complete_data_item_value"
            android:text="女"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_clickable"/>
    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <LinearLayout
        android:onClick="onBirthdayClick"
        style="@style/complete_data_click_item">

        <TextView
            style="@style/complete_data_text1"
            android:text="@string/birthday"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            style="@style/complete_data_item_value"
            android:text="1990-10-10"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_clickable"/>
    </LinearLayout>


    <LinearLayout
        style="@style/complete_data_click_item"
        android:layout_marginTop="@dimen/view_spacing_2">

        <TextView
            style="@style/complete_data_text1"
            android:text="@string/zone_name"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <EditText
            android:background="#0000"
            style="@style/complete_data_item_value"
            android:text="无啦啦小区"/>

        <ImageView
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_clickable"/>
    </LinearLayout>

    <View style="@style/horizontal_line"/>

    <LinearLayout
        style="@style/complete_data_click_item"
        android:gravity="top">

        <TextView
            style="@style/complete_data_text1"
            android:text="@string/my_sign"/>

        <EditText
            android:background="#0000"
            style="@style/complete_data_item_value"
            android:layout_width="0dp"
            android:layout_marginLeft="63dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="无啦啦小区无啦啦小区无啦啦小区无啦啦小区"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_clickable"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>
